2012-06-05  Niibe Yutaka  <gniibe@fsij.org>

	Take advantage of the Thumb-2 "rbit" instruction.
	* regnual/regnual.c (fetch): Reverse bits.
	* src/usb_ctrl.c (rbit): New.  Deleted reverse32.
	(download_check_crc32): Use rbit.
	* tool/gnuk_upgrade.py (crc32): Just use binascii.crc32.
	(crctab): Remove.

2012-06-04  Niibe Yutaka  <gniibe@fsij.org>

	Card holder certificate data object bug fixes.
	* tool/gnuk_put_binary_libusb.py (gnuk_token.cmd_get_response):
	Handle larger data such as card holder certificate.
	* src/flash.c (flash_write_binary): Bug fix.  Call
	flash_check_blank with p + offset.
	* src/gnuk.h (FLASH_CH_CERTIFICATE_SIZE): Define here (was: flash.c).

	Implement CRC32 check for firmware update.
	* src/usb_ctrl.c (download_check_crc32): New.
	* regnual/regnual.c (calc_crc32): New.
	(regnual_ctrl_write_finish): Call calc_crc32.
	* tool/gnuk_upgrade.py (crc32): New.
	(regnual.download): Check crc32code.

	* regnual/regnual.c (regnual_ctrl_write_finish): Bug fix.

2012-06-01  Niibe Yutaka  <gniibe@fsij.org>

	Support firmware update with public key authentication.
	* tool/gnuk_upgrade.py (gpg_sign): New.
	* tool/gnuk_put_binary_libusb.py (main): Support firmware update
	key registration.

	Update of reGNUal.
	* regnual/regnual.c (main): Follow the change of usb_lld_init.
	(regnual_config_desc): Include interface descriptor.
	(usb-strings.c.inc): Change the file name.
	* regnual/Makefile (regnual.o): Depend on sys.h.
	* src/configure (usb-strings.c.inc): ifdef-out
	gnuk_revision_detail and gnuk_config_options (for reGNUal).
	* src/usb_desc.c (USB_STRINGS_FOR_GNUK): Define.

	USB bug fixes.
	* src/usb_ctrl.c (gnuk_usb_event): Bug fix for handling
	USB_EVENT_CONFIG.  Do nothing when current_conf == value.
	* src/usb_lld.c (std_clear_feature): Bug fix.  Always clear DTOG.
	(usb_lld_init): New argument for FEATURE.

2012-05-31  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): BUF size is
	256 (was: 1024).